--- a/app/html/home/home.html
+++ b/app/html/home/home.html
@@ -147,7 +147,7 @@
       <div class="bio-section m-5 rounded-3 pt-3 pb-3">
         <div class="row">
           <div class="col-12 col-md-4" style="align-content: center;">
-            <img src="/static/images/121_dog_training_services.jpeg" class="img-fluid"
+            <img src="/static/images/121_dog_training_services.jpeg" class="bio-image img-fluid"
               title="1 2 1 dog training services">
           </div>
           <div class="col-12 col-md-8 sales_items">
@@ -317,16 +317,19 @@
           </ul>
           <p>You'll receive recaps of the training we are doing with your dog each day, their progress, and photos and
             videos too, with a handover session on the last day to be sure you're set up for success!</p>
-
-          <div class="row mt-3">
-            <div class="col-6 text-center sales_items_white h4">5 days: £250</div>
-            <a href="/external/bookings?filter=Training%20Bookcamp%205%20Day"
-              class="btn login_button btn-lg px-4 rounded-pill mt-2 text-center me-2">Book Now</a>
+          <div class="row align-items-center">
+            <div class="col text-start sales_items_white h4">5 days: £250</div>
+            <div class="col text-end">
+              <a href="/external/bookings?filter=Training%20Bookcamp%205%20Day"
+                class="btn login_button btn-lg px-4 rounded-pill mt-2">Book Now</a>
+            </div>
           </div>
-          <div class="row mt-3">
-            <div class="col-6 text-center sales_items_white h4">10 days: £500</div>
-            <a href="/external/bookings?filter=Training%20Bookcamp%2010%20Day"
-              class="btn login_button btn-lg px-4 rounded-pill mt-2 text-center me-2">Book Now</a>
+          <div class="row align-items-center mt-3">
+            <div class="col text-start sales_items_white h4">10 days: £500</div>
+            <div class="col text-end">
+              <a href="/external/bookings?filter=Training%20Bookcamp%2010%20Day"
+                class="btn login_button btn-lg px-4 rounded-pill mt-2">Book Now</a>
+            </div>
           </div>
 
         </div>
@@ -356,124 +359,127 @@
             because let's face it, we need all the support we can get when owning a reactive dog. We are here for you.
           </p>
           <p class="text-white">Our Bootcamps are offered to people living within a 30-minute radius of Leek.</p>
-          <div class="row mt-3">
-            <div class="col-6 text-center sales_items_white h4">5 days: £250</div>
-            <a href="/external/bookings?filter=Behaviour%20Bookcamp%205%20Day"
+          <div class="row align-items-center mt-3">
+            <div class="col text-start sales_items_white h4">5 days: £250</div>
+            <div class="col text-end">
+              <a href="/external/bookings?filter=Behaviour%20Bookcamp%205%20Day"
+                class="btn login_button btn-lg px-4 rounded-pill mt-2">Book Now</a>
+            </div>
+          </div>
+          <div class="row align-items-center mt-3">
+            <div class="col text-start sales_items_white h4">10 days: £500</div>
+            <div class="col text-end">
+              <a href="/external/bookings?filter=Behaviour%20Bookcamp%205%20Day"
+                class="btn login_button btn-lg px-4 rounded-pill mt-2">Book Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12" id="walk_and_train">
+      <div class="bio-section m-5 rounded-3 pt-3 pb-3"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url('/static/images/walk_and_train.jpeg'); background-size: cover; background-position: center; background-repeat: unset;">
+        <h1 class="text-center" style="font-family: 'Lora', serif!important;">Walk And Train</h1>
+        <div class="row mt-3">
+          <div class="col-12 col-md-10 sales_items">
+            <h4 class="mb-3">What it's all about</h4>
+            <p class="text-white">
+              Our walk and train sessions are super popular at the moment because they're perfect for topping up and
+              improving training but require less of your time as we come to take your dog out for you!
+            </p>
+            <p class="text-white">
+              At 45 minutes long they're a great way to give dedicated 1-1 training with your dog whilst getting their
+              walk in too! Suitable for sporadic or weeklu booking.
+            </p>
+            <p class="text-white">Our walk and train sessions are offered to people living within a 30-minute radius of
+              Leek.</p>
+            <p class="text-white mt-4">
+              £45 per session
+            </p>
+          </div>
+          <div class="col-12 col-md-2 sales_items">
+            <a href="/external/bookings?filter=Walk%20and%20Train"
               class="btn login_button btn-lg px-4 rounded-pill mt-2 text-center me-2">Book Now</a>
           </div>
-          <div class="row mt-3">
-            <div class="col-6 text-center sales_items_white h4">10 days: £500</div>
-            <a href="/external/bookings?filter=Behaviour%20Bookcamp%205%20Day"
+        </div>
+      </div>
+    </div>
+    <div class="col-12" id="puppy_training">
+      <div class="bio-section m-5 rounded-3 pt-3 pb-3"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url('/static/images/puppy_training.jpeg'); background-size: cover; background-position: center; background-repeat: unset;">
+        <h1 class="text-center" style="font-family: 'Lora', serif!important;">Puppy Supercharger</h1>
+        <div class="row mt-3">
+          <div class="col-12 col-md-10 sales_items">
+            <h4 class="mb-3">What it's all about</h4>
+            <p class="text-white">
+              Just got your puppy and want to have the very best start with them?
+            </p>
+            <p class="text-white">
+              Maybe you've had your puppy a couple of week and are needing some support with those challenges puppy
+              ownership brings?
+            </p>
+            <p class="text-white">
+              From toilet training to teething, basic training to sleeping through the night, our Puppy Supercharger
+              service will give you everything you need to make their early life at home (and out and about!) as fun and
+              enjoyable as possible!
+            </p>
+            <p class="text-white">
+              You'll recieve our Puppy Lifeskills Guide, and hour session with one of our team and a written session
+              recap to get you going before your next session.
+            </p>
+            <p class="text-white mt-4">
+              £100
+            </p>
+          </div>
+          <div class="col-12 col-md-2 sales_items">
+            <a href="/external/bookings?filter=Puppy%Supercharger"
               class="btn login_button btn-lg px-4 rounded-pill mt-2 text-center me-2">Book Now</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-12" id="walk_and_train">
-    <div class="bio-section m-5 rounded-3 pt-3 pb-3"
-      style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url('/static/images/walk_and_train.jpeg'); background-size: cover; background-position: center; background-repeat: unset;">
-      <h1 class="text-center" style="font-family: 'Lora', serif!important;">Walk And Train</h1>
-      <div class="row mt-3">
-        <div class="col-12 col-md-10 sales_items">
-          <h4 class="mb-3">What it's all about</h4>
-          <p class="text-white">
-            Our walk and train sessions are super popular at the moment because they're perfect for topping up and
-            improving training but require less of your time as we come to take your dog out for you!
-          </p>
-          <p class="text-white">
-            At 45 minutes long they're a great way to give dedicated 1-1 training with your dog whilst getting their
-            walk in too! Suitable for sporadic or weeklu booking.
-          </p>
-          <p class="text-white">Our walk and train sessions are offered to people living within a 30-minute radius of
-            Leek.</p>
-          <p class="text-white mt-4">
-            £45 per session
-          </p>
-        </div>
-        <div class="col-12 col-md-2 sales_items">
-          <a href="/external/bookings?filter=Walk%20and%20Train"
-            class="btn login_button btn-lg px-4 rounded-pill mt-2 text-center me-2">Book Now</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-12" id="puppy_training">
-    <div class="bio-section m-5 rounded-3 pt-3 pb-3"
-      style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url('/static/images/puppy_training.jpeg'); background-size: cover; background-position: center; background-repeat: unset;">
-      <h1 class="text-center" style="font-family: 'Lora', serif!important;">Puppy Supercharger</h1>
-      <div class="row mt-3">
-        <div class="col-12 col-md-10 sales_items">
-          <h4 class="mb-3">What it's all about</h4>
-          <p class="text-white">
-            Just got your puppy and want to have the very best start with them?
-          </p>
-          <p class="text-white">
-            Maybe you've had your puppy a couple of week and are needing some support with those challenges puppy
-            ownership brings?
-          </p>
-          <p class="text-white">
-            From toilet training to teething, basic training to sleeping through the night, our Puppy Supercharger
-            service will give you everything you need to make their early life at home (and out and about!) as fun and
-            enjoyable as possible!
-          </p>
-          <p class="text-white">
-            You'll recieve our Puppy Lifeskills Guide, and hour session with one of our team and a written session
-            recap to get you going before your next session.
-          </p>
-          <p class="text-white mt-4">
-            £100
-          </p>
-        </div>
-        <div class="col-12 col-md-2 sales_items">
-          <a href="/external/bookings?filter=Puppy%Supercharger"
-            class="btn login_button btn-lg px-4 rounded-pill mt-2 text-center me-2">Book Now</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-12" id="behavioural_or_training">
-    <div class="bio-section m-5 rounded-3 pt-3 pb-3 sales_items">
-      <h2 class="text-center pb-4">"Does my dog need behavioural or training help?"</h2>
+    <div class="col-12" id="behavioural_or_training">
+      <div class="bio-section m-5 rounded-3 pt-3 pb-3 sales_items">
+        <h2 class="text-center pb-4">"Does my dog need behavioural or training help?"</h2>
 
-      <p>
-        It can be a little difficult to know whether your dog needs behavioural or training help so here is a list of
-        some of the differences. There are many more that could be added to these lists so if you're unsure, please do
-        get in touch.
-      </p>
-      <p>
-        If you book a training option and it later appears that your dog needs behavioural training, we will suggest a
-        different service.
-      </p>
+        <p>
+          It can be a little difficult to know whether your dog needs behavioural or training help so here is a list of
+          some of the differences. There are many more that could be added to these lists so if you're unsure, please do
+          get in touch.
+        </p>
+        <p>
+          If you book a training option and it later appears that your dog needs behavioural training, we will suggest a
+          different service.
+        </p>git
 
-      <div class="row mt-5">
-        <div class="col-12 col-md-6">
-          <h2 class="text-center pb-4">Behavioural</h2>
-          <ul>
-            <li>Barking and lunging at people and/or dogs</li>
-            <li>Struggles when left home alone</li>
-            <li>Can't follow training outside if there are dogs, people or cars around</li>
-            <li>Resource guarding</li>
-            <li>Chasing/stalking traffic</li>
-            <li>Barking and/aggressive displays to people coming into or leaving the home</li>
-            <li>Fearfulness/anxiety</li>
-            <li>Reactivity when on walks</li>
-          </ul>
-        </div>
-        <div class="col-12 col-md-6">
-          <h2 class="text-center pb-4">Training</h2>
-          <ul>
-            <li>Poor recall on and off lead</li>
-            <li>Pulling on the lead in excitement (not reacting towards people, dogs, cars, animals)</li>
-            <li>Sit, stay, basic obedience</li>
-            <li>Needing calmer behaviour in the house</li>
-            <li>Jumping up people in excitement</li>
-            <li>Wanting to learn skills like retrieving</li>
-          </ul>
+        <div class="row mt-5">
+          <div class="col-12 col-md-6">
+            <h2 class="text-center pb-4">Behavioural</h2>
+            <ul>
+              <li>Barking and lunging at people and/or dogs</li>
+              <li>Struggles when left home alone</li>
+              <li>Can't follow training outside if there are dogs, people or cars around</li>
+              <li>Resource guarding</li>
+              <li>Chasing/stalking traffic</li>
+              <li>Barking and/aggressive displays to people coming into or leaving the home</li>
+              <li>Fearfulness/anxiety</li>
+              <li>Reactivity when on walks</li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6">
+            <h2 class="text-center pb-4">Training</h2>
+            <ul>
+              <li>Poor recall on and off lead</li>
+              <li>Pulling on the lead in excitement (not reacting towards people, dogs, cars, animals)</li>
+              <li>Sit, stay, basic obedience</li>
+              <li>Needing calmer behaviour in the house</li>
+              <li>Jumping up people in excitement</li>
+              <li>Wanting to learn skills like retrieving</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
   </div>
 </section>
@@ -640,6 +646,7 @@
           document.getElementById("divEmail").style.display = "none";
           document.getElementById("divEmailSuccess").style.display = "";
         }
+        alert('Your message has been sent.')
         hideLoadingOverlay();
       });
     } else {
